# ATLAS

./: .gitignore  .~lock.ATLAS_manual.odt#  ATLAS_manual.odt  ATLAS_manual_v0.2.1.odt  ATLAS_manual_v0.3.0.odt  ATLAS_manual_v0.3.1.odt  ATLAS_manual_v0.3.2.odt  ATLAS_manual_v0.3.odt  ATLAS_manual_v0.4.0.odt  ATLAS_manual_v0.4.2.odt  ATLAS_manual_v5.odt  ATLAS_user_manual.odt  LICENSE  README.md  __call_atlas_interactive__.py  __main__.py  __master__.py  __master_alpha__.py  __master_intercomparison__.py  __master_legacy__.py  __master_polis__.py  __master_testing__.py  __nsf_calculator__.py  __signal_testing__.py  __signal_viewer__.py  pyproject.toml
calling_scripts/: __call_atlas_reviewer_version__.py  __call_atlas_user_version__.py
drafts/: ATLAS_manual.odt  ATLAS_manual_v5.odt  ATLAS_user_manual.odt
helper_functions/: caller_utils.py  cleaner.py  parse_caller_args.py  parse_intercomparison_args.py  parse_master_args.py  processing_chain.py  read_intercomparison_config.py  read_master_config.py  running_options.py  testing_utils.py  viewer_utils.py
lidar_processing/: glue.py  signal.py  smooth.py
molecular/: __init__.py  height_scales.py  rayleigh_atm.py
plotting/: mpl_default.py  plot_ovl.py  plot_quicklook.py
processor/: __preprocessor__.py
program/: __intercomparison__.py  __main__.py  __polarization_calibration__.py  __quicklook__.py  __rayleigh_fit__.py  __telecover__.py
readers/: read_scc.py
sample/: configuration_file.ini  processing_options.ini
scc_converter/: __scc_converter__.py
templates/: call_atlas.ini  config_file.ini  (+1 more)
ui/: demo.py
(+115 files in other folders)
